@@ -1,10 +1,10 @@
 Package: stabledist
-Version: 0.6-6
-Date: 2013-06-12
+Version: 0.7-0
+Date: 2015-05-05
 Title: Stable Distribution Functions
 Author: Diethelm Wuertz, Martin Maechler and Rmetrics core team members.
 Maintainer: Martin Maechler <maechler@stat.math.ethz.ch>
-Depends: R (>= 2.12.0), stats, utils
+Depends: R (>= 3.1.0), stats, utils
 Suggests: Matrix, fBasics, FMStable, RUnit, Rmpfr, sfsmisc
 Description: Density, Probability and Quantile functions, and random number
   generation for (skew) stable distributions, using the parametrizations of
